DSL_GRAMMAR.ebnf
(* NOVA DSL Grammar - Phase 1 (Micro-Architecture & Ergonomics) *)

program         = { top_decl } EOF ;

top_decl        = import_stmt
                | struct_decl
                | task_decl
                | bus_decl
                | function_decl
                | loop_decl
                | var_decl
                | statement ;

import_stmt     = "import" STRING ";" ;

function_decl   = "fn" IDENT "(" [ param_list ] ")" "->" type block ;
loop_decl       = "loop" block ;
param_list      = param { "," param } ;
param           = IDENT ":" type ;

type            = IDENT ;

struct_decl     = "struct" IDENT "{" { struct_field } "}" ;
struct_field    = IDENT ":" type ";" ;

task_decl       = { task_decorator } "task" IDENT "(" ")" block ;
task_decorator  = "@" IDENT "(" expression ")" ;

bus_decl        = "bus" bus_type IDENT "{" bus_property { bus_property | device_decl } "}" ;
bus_type        = "I2C" | "SPI" | IDENT ;
bus_property    = ("sda" | "scl") ":" expression ";"
                | "freq" ":" frequency ";" ;
frequency       = INT [ IDENT ] | expression ;
device_decl     = "device" IDENT "{" "address" ":" expression ";" "}" ;

var_decl        = "let" IDENT [ ":" type ] [ "=" expression ] ";"
                | "const" [ "volatile" ] [ "let" ] IDENT [ ":" type ] [ "=" expression ] ";"
                | "volatile" [ "const" ] [ "let" ] IDENT [ ":" type ] [ "=" expression ] ";" ;

statement       = block
                | if_stmt
                | while_stmt
                | for_stmt
                | match_stmt
                | spawn_stmt
                | return_stmt
                | gpio_mode_stmt
                | digital_write_stmt
                | pwm_write_stmt
                | rgb_write_stmt
                | wifi_connect_stmt
                | delay_stmt
                | unsafe_stmt
                | expr_stmt ;

block           = "{" { top_decl } "}" ;

if_stmt         = "if" "(" expression ")" block [ "else" block ] ;
while_stmt      = "while" "(" expression ")" block ;
for_stmt        = "for" "(" [ for_init ] ";" [ expression ] ";" [ expression ] ")" block ;
match_stmt      = "match" "(" expression ")" "{" { match_arm } "}" ;
match_arm       = ("_" | expression) "=>" block ;
spawn_stmt      = "spawn" IDENT "(" ")" ";" ;
for_init        = var_decl_no_semi | expression ;
var_decl_no_semi= "let" IDENT [ ":" type ] [ "=" expression ]
                | "const" [ "volatile" ] [ "let" ] IDENT [ ":" type ] [ "=" expression ]
                | "volatile" [ "const" ] [ "let" ] IDENT [ ":" type ] [ "=" expression ] ;

return_stmt     = "return" [ expression ] ";" ;
expr_stmt       = expression ";" ;

gpio_mode_stmt  = "gpioMode" "(" expression "," ("out" | "in") ")" ";" ;
digital_write_stmt = "digitalWrite" "(" expression "," expression ")" ";" ;
pwm_write_stmt  = "pwmWrite" "(" expression "," expression [ "," expression ] ")" ";" ;
rgb_write_stmt  = "rgbWrite" "(" expression "," expression "," expression "," expression ")" ";" ;

wifi_connect_stmt = "wifiConnect" "(" expression "," expression ")" ";" ;
delay_stmt      = "delay" "(" expression ")" ";" ;
unsafe_stmt     = "unsafe" raw_block ;

raw_block       = RAW_UNSAFE_BLOCK ;

expression      = assignment ;
assignment      = assignable assignment_op assignment | logic_or ;
assignable      = IDENT { "." IDENT } ;
assignment_op   = "=" | "+=" | "-=" | "*=" | "/=" ;

logic_or        = logic_and { "||" logic_and } ;
logic_and       = bit_or { "&&" bit_or } ;
bit_or          = bit_xor { "|" bit_xor } ;
bit_xor         = bit_and { "^" bit_and } ;
bit_and         = equality { "&" equality } ;
equality        = comparison { ("==" | "!=") comparison } ;
comparison      = shift { ("<" | "<=" | ">" | ">=") shift } ;
shift           = term { ("<<" | ">>") term } ;
term            = factor { ("+" | "-") factor } ;
factor          = unary { ("*" | "/" | "%") unary } ;
unary           = ("!" | "-" | "~") unary | postfix ;
postfix         = call { ("++" | "--") } ;
call            = primary { "(" [ argument_list | named_argument_list ] ")" | "." IDENT | "as" IDENT } ;
argument_list   = expression { "," expression } ;
named_argument_list = named_argument { "," named_argument } ;
named_argument  = IDENT ":" expression ;

primary         = INT | HEX_INT | BIN_INT | FLOAT | DURATION | STRING | "true" | "false"
                | IDENT
                | if_expr
                | "analogRead" "(" expression ")"
                | "(" expression ")" ;

if_expr         = "if" "(" expression ")" value_block "else" value_block ;
value_block     = "{" { declaration_or_stmt } expression "}" ;
declaration_or_stmt = var_decl | statement ;

HEX_INT         = "0x" HEX_DIGIT { HEX_DIGIT } | "0X" HEX_DIGIT { HEX_DIGIT } ;
BIN_INT         = "0b" ("0" | "1") { "0" | "1" } | "0B" ("0" | "1") { "0" | "1" } ;
DURATION        = INT ("ms" | "us" | "s") ;
